--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.11.1",
     "iconv-lite": "^0.4.8",
     "jade": "~1.9.1",
+    "mongoose": "^4.0.2",
     "morgan": "~1.5.1",
     "serve-favicon": "~2.2.0",
     "underscore": "^1.8.3"
