--- a/public/bower.json
+++ b/public/bower.json
@@ -9,6 +9,7 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.4",
     "requirejs": "~2.1.17",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "font-awesome": "~4.3.0"
   }
 }
