--- a/public/bower.json
+++ b/public/bower.json
@@ -10,6 +10,7 @@
     "bootstrap": "~3.3.4",
     "requirejs": "~2.1.17",
     "backbone": "~1.1.2",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "amcharts": "~3.13.3"
   }
 }
